# oneclick-subtitles-generator

./: .eslintignore  .gitattributes  .gitignore  .gitmodules  .npmrc  1744176691512-player-script.js  1744431266376-player-script.js  1745596497376-player-script.js  BUTTON_SYSTEM_REFACTOR.md  CACHE_CLEAR_EXAMPLE.md  CHATTERBOX_SETUP_FIXES.md  CLAUDE.md  F5-TTS-README.md  INDIVIDUAL_CACHE_CLEAR_IMPLEMENTATION.md  INSTALLER_GUIDE.md  INSTALLER_README.md  LARGE_FILE_HANDLING.md  LOGGING_IMPROVEMENTS.md  LOGGING_SUMMARY.md  OSG_all_in_one.bat  OSG_all_in_one.sh  OSG_all_in_one_1.3.bat  OSG_all_in_one_preview.bat  OSG_installer.sh  OSG_installer_Windows.bat  OSG_installer_Windows_beta.bat  OSG_uninstaller.sh  PLAYWRIGHT_TESTING.md  README.md  README.vi.md  SIMPLIFIED_PROCESSING.md  SVG_REPLACEMENT_GUIDE.md  VIDEO_RENDERING_INTEGRATION_TODO.md  WARP.md  activate-py311.bat  app.js  asciilogo.txt  check-uv.js  check_f5tts_cuda.bat  clearLocks.js  (+58 more)
additional_docs/: CORS_CONFIGURATION.md  GPU_ACCELERATION_OPTIMIZATION_GUIDE.md  PLAYWRIGHT_TESTING.md  UPDATING_TTS_VERSIONS.md
chatterbox/: api.py  (+6 more)
chatterbox-fastapi/: API_README.md  Dockerfile  api.py  docker-compose.yml  requirements-api.txt  start_api.py  (+1 more)
chatterbox/chatterbox/: .beamignore  .gitignore  README.md  beam_config.yaml  download_hf_repo.py  download_uv.bat  finetune_t3_beam.py  gradio_interface.py  gradio_local.py  gradio_tts_app.py  gradio_vc_app.py  launch_gui.bat  launch_gui_beam.bat  main.py  model_path.json.disabled  pyproject.toml
chatterbox/chatterbox/chatterbox/: tts.py  vc.py
chatterbox/chatterbox/chatterbox/models/t3/: llama_configs.py  t3.py
chatterbox/chatterbox/chatterbox/models/t3/modules/: t3_config.py
chatterbox/chatterbox/chatterbox/nbs/: strip_weight_prefix.ipynb
chatterbox/chatterbox/chatterbox/utils/: t3data_arguments.py  training_args.py
chatterbox/chatterbox/emilia_ds_scripts/: download_emilia.py  extract_emilia_arrows_to_text_file.py  extract_emilia_beam.py  extract_emilia_json_text.py
chatterbox/chatterbox/src/: copy_ft_s3gen_dict.py
chatterbox/chatterbox/tokenizer_scripts/: compare_merges.py  derive_merges_accurate.py  examine_tokenizer.py  extend_tokenizer_weights.py  ja_text_file_to_hiragana.py  make_new_tokenizer.py  merge_tokenizers.py
parakeet_wrapper/: .gitignore  README.md  app.py  example_usage.py  pyproject.toml  requirements.txt
(+1278 files in other folders)
