[project]
name = "chatterbox-tts"
version = "0.1.2"
description = "Chatterbox: Open Source TTS and Voice Conversion by Resemble AI"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "resemble-ai", email = "engineering@resemble.ai"}
]
dependencies = [
    "numpy~=1.26.0",
    "resampy==0.4.3",
    "librosa==0.11.0",
    "s3tokenizer",
    "torch==2.7.0",
    "torchaudio==2.7.0",
    "transformers>=4.52.4",
    "diffusers==0.29.0",
    "resemble-perth==1.0.1",
    "omegaconf==2.3.0",
    "conformer==0.3.2",
    "safetensors==0.5.3",
    "peft>=0.15.2",
    "tensorboard>=2.19.0",
    "datasets>=3.6.0",
    "pykakasi>=2.3.0",
    "pyarrow>=20.0.0",
    "tokenizers>=0.21.1",
    "tqdm>=4.67.1",
    "fastapi==0.112.1",
    "pydantic==2.6.4",
    "gradio>=4.26.0",
    "langdetect>=1.0.9",
    "webdataset>=0.2.100",
    "gradio-utils",
]

[project.urls]
Homepage = "https://github.com/resemble-ai/chatterbox"
Repository = "https://github.com/resemble-ai/chatterbox"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["chatterbox"]

[project.optional-dependencies]
cu128 = [
  "torch>=2.7.0",
  "torchvision>=0.22.0",
  "torchaudio>=2.7.0"
]
beam = [
    "beam-client>=0.2.165",
]

[tool.uv]
override-dependencies = [
  "fastapi==0.112.1",
  "gradio>=4.0.0,<5.0.0",
  "gradio_client==0.15.1",
  "websockets>=10.0,<12.0"
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", extra = "cu128" },
]
torchvision = [
  { index = "pytorch-cu128", extra = "cu128" },
]
torchaudio = [
  { index = "pytorch-cu128", extra = "cu128" },
]
gradio-utils = { git = "https://github.com/JarodMica/gradio_utils.git" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
